# cheat.s

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  configure.ac  flake.nix  patch.sh
asm/: ansi.asm
patches/: linux.patch  patch.patch
patches/linux/: macros.patch  main.patch  makefile.patch
src/: alpha.asm  ansi.asm  codes.inc  cols.asm  macros.inc  main.asm  months.asm
